--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,41 +1,67 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:model="clr-namespace:ProyectoP2Final.DTOs"
              x:Class="ProyectoP2Final.MainPage">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+    <Grid RowDefinitions="Auto, Auto, *" RowSpacing="15" Margin="15">
+        <Button Grid.Row="0" Text="Nueva Reserva" Command="{Binding CrearCommand}"/>
+        <Label Grid.Row="1" Text="Sus Reservas" FontSize="Subtitle"/>
+        <ScrollView Grid.Row="2">
+            <CollectionView ItemsSource="{Binding ListaReserva}">
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout ItemSpacing="5" Orientation="Vertical"/>
+                </CollectionView.ItemsLayout>
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="model:ReservaDTO">
+                        <Border Padding="10,5" HorizontalOptions="FillAndExpand" >
+                            <Border.StrokeShape>
+                                <RoundRectangle CornerRadius="5"/>
+                            </Border.StrokeShape>
+                            <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto" ColumnDefinitions="Auto,*">
+                                <Label Grid.Row="0" Grid.Column="0" Text="Reserva a nombre de: " FontAttributes="Bold"/>
+                                <Label Grid.Row="0" Grid.Column="1" HorizontalOptions="End" Text="{Binding Nombre}"/>
 
-            <Label
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
+                                <Label Grid.Row="1" Grid.Column="0" Text="Cedula: " FontAttributes="Bold"/>
+                                <Label Grid.Row="1" Grid.Column="1" HorizontalOptions="End" Text="{Binding Cedula}"/>
 
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
+                                <Label Grid.Row="2" Grid.Column="0" Text="Numero de huespedes: " FontAttributes="Bold"/>
+                                <Label Grid.Row="2" Grid.Column="1" HorizontalOptions="End" Text="{Binding NumeroHuespedes}"/>
 
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
+                                <Label Grid.Row="3" Grid.Column="0" Text="Fecha de Entrada: " FontAttributes="Bold"/>
+                                <Label Grid.Row="3" Grid.Column="1" HorizontalOptions="End" Text="{Binding FechaEntrada,StringFormat='{0:dd/MM/yyyy}'}"/>
 
-        </VerticalStackLayout>
-    </ScrollView>
+                                <Label Grid.Row="4" Grid.Column="0" Text="Fecha de Salida: " FontAttributes="Bold"/>
+                                <Label Grid.Row="4" Grid.Column="1" HorizontalOptions="End" Text="{Binding FechaSalida,StringFormat='{0:dd/MM/yyyy}'}"/>
+
+                                <Label Grid.Row="6" Grid.Column="0" Padding="0,15,10,5" Text="Editar Reserva" TextColor="Black">
+                                    <Label.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding BindingContext.EditarCommand, Source={x:RelativeSource AncestorType={x:Type ContentPage}}}" CommandParameter="{Binding}"/>
+                                    </Label.GestureRecognizers>
+                                    
+                                </Label>
+
+                                <Label Grid.Row="6" Grid.Column="1" Padding="10,15,0,5" Text="Eliminar Reserva" TextColor="DarkRed">
+                                    <Label.GestureRecognizers>
+                                        <TapGestureRecognizer Command="{Binding BindingContext.EliminarCommand, Source={x:RelativeSource AncestorType={x:Type ContentPage}}}" CommandParameter="{Binding}"/>
+                                    </Label.GestureRecognizers>
+
+                                </Label>
+
+                            </Grid>
+                            
+                        </Border>
+                        
+                        
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+                
+                
+                
+            </CollectionView>
+            
+        </ScrollView>
+    </Grid>
 
 </ContentPage>
