--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -4,11 +4,16 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:ProyectoP2Final"
-    Shell.FlyoutBehavior="Disabled">
+    xmlns:views="clr-namespace:ProyectoP2Final.Views"
+    Shell.FlyoutBehavior="Flyout">
 
+    <ShellContent Title="Inicio"
+              ContentTemplate="{DataTemplate views:Inicio}"
+              />
     <ShellContent
-        Title="Home"
+        Title="Reservar Habitacion"
         ContentTemplate="{DataTemplate local:MainPage}"
         Route="MainPage" />
+    
 
 </Shell>
